Repository Addded and problems solveds

--- a/MyBlogs/appsettings.json
+++ b/MyBlogs/appsettings.json
@@ -6,5 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "Javobi": "ana xudam javob dodam"
+  "ConnectionStrings": {
+    "StaffDb" : "server=(localdb)\\MSSQLLocalDB;database=StaffDb;Integrated Security=true;"
+  }
 }
